Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -104,7 +104,7 @@ input, select, textarea {
 	body, input, select, textarea {
 		color: #a2a2a2;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
-		font-size: 20pt;
+		font-size: 16pt;
 		font-weight: 400;
 		line-height: 1.75em;
 	}
@@ -3035,27 +3035,17 @@ input, select, textarea {
 
 		/* Basic */
 
-		body, input, select, textarea {
-			font-size: 12pt;
-		}
-
-		.work-item .image {
-			max-width: 300px; /* Set a maximum width */
-			max-height: 250px;
-		}
-
-		.work-item .image img {
-			width: 100%;
-			height: 100%;
-		}
+			body, input, select, textarea {
+				font-size: 12pt;
+			}
 
 		/* Keep connect-me section in the footer */
-		.header-connect {
-			display: none;
-		}
-		.footer-connect {
-			display: block;
-		}
+			.header-connect {
+				display: none;
+			}
+			.footer-connect {
+				display: block;
+			}
 	}
 
 /* Large */
@@ -3422,13 +3412,6 @@ input, select, textarea {
 		}
 
 /* Skills Section */
-
-/* Centering the skills section */
-.right-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 
 #skills {
     max-width: 900px;
